force-app/main/default/objects/VCG_CPQ_Pricing_Condition__c/VCG_CPQ_Pricing_Condition__c.object-meta.xml
<CustomObject>
    <label>VCG CPQ Pricing Condition</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VCG CPQ Pricing Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>