force-app/main/default/objects/VCG_CPQ_Pricing_Condition__c/fields/Calculation__c.field-meta.xml
<CustomField>
    <fullName>Calculation__c</fullName>
    <description>In the future this will be the formula that is entered, it will be parsed when the record is saved and converted into the compiled version automatically. For now, it is just a nice to read version that should match the compiled version.</description>
    <inlineHelpText>Currently this is just a nice-to-read version of the compiled calculation formula</inlineHelpText>
    <label>Calculation (Readable)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>