force-app/main/default/objects/VCG_CPQ_Pricing_Condition__c/fields/Calculation_Compiled__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Compiled__c</fullName>
    <label>Calculation (Compiled)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>