force-app/main/default/objects/VCG_CPQ_Pricing_Condition__c/fields/Data_Key_Definition__c.field-meta.xml
<CustomField>
    <fullName>Data_Key_Definition__c</fullName>
    <label>Data Key Definition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>