force-app/main/default/objects/VCG_CPQ_Pricing_Condition__c/fields/Data_Scale_Field_3__c.field-meta.xml
<CustomField>
    <fullName>Data_Scale_Field_3__c</fullName>
    <label>Data Scale Field 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>