force-app/main/default/objects/VCG_CPQ_Pricing_Condition__c/fields/Is_Pricing_Related__c.field-meta.xml
<CustomField>
    <fullName>Is_Pricing_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Oracle integration. Informatica script will look at this field to determine which pricing condition data records should be truncated on a nighly basis. If TRUE, they will be truncated.</description>
    <inlineHelpText>If pricing condition, TRUE. Otherwise, FALSE.</inlineHelpText>
    <label>Is Pricing Related?</label>
    <type>Checkbox</type>
</CustomField>