force-app/main/default/objects/VCG_CPQ_Pricing_Condition__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Static</fullName>
            </value>
            <value>
                <fullName>Scaled</fullName>
            </value>
            <value>
                <fullName>Scaled Cumulative</fullName>
            </value>
            <value>
                <fullName>Percent of Core</fullName>
            </value>
            <value>
                <fullName>Maintenance Price</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Surcharge</fullName>
            </value>
            <value>
                <fullName>Statistical</fullName>
            </value>
            <value>
                <fullName>Calculation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>